Bug 1706853 - Make GetFrameVisibleRectOnScreen return Nothing() if we haven't received OOP iframe's transformed rectangle from APZ. r=botond

With this change we no longer incorrectly consider there is no visible rect for
the OOP iframe where we haven't yet received the rectangle from APZ.

Differential Revision: https://phabricator.services.mozilla.com/D117260